--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,94 @@
-<!DOCTYPE html>
-<html>
-	<head>
-	    <meta charset="utf-8">
-		<title>SUPERTITLE</title>
-	</head>
-	<body>
-		<input type="submit" id="button">
-		<script src="scr.js"></script>
-	</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="css/main.css">
+
+    <title>onlinedoccom</title>
+  </head>
+  <body>
+      <header>
+          <div class="header">
+            <div class="menu">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-7">
+                    <div class="logo">
+                      <a href="test.html">
+                      <img src="img/logo1.png" alt="" class="img-fluid"/></a>
+                    </div>
+                  </div>
+                  <div class="col-md-5">
+                    <nav>
+                        <!-- возмоджно тут будут контакты :/ -->
+                    </nav>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </header>
+<section>
+  <div class="block">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12 col-xs-12 col-md-12 col-lg-8 col-xl-8">
+          <div class="row">
+              <div class="col-md-6">
+                <h1 href="#">
+                  <button type="button" class="btn btn-primary btn-circle">
+                    <i class="fa fa-align-center"></i>
+                  </button>
+                  О нас <div class="text">
+                    <small>
+                    <p>♦have some tea and some more of these soft French rolls</p>
+                    <p>♦have some tea and some more of these soft French rolls</p>
+                    <p>♦have some tea and some more of these soft French</p>
+                    </small>
+                      </div>
+              </h1></div>
+              <div class="col-md-6">
+                <h2 href="#">
+                <button type="button" class="btn btn-info btn-circle">
+                  <i class="fa fa-suitcase"></i>
+                </button>
+                Услуги <div class="text">
+                  <small>
+                  <p>♦have some tea and some more of these soft French rolls</p>
+                  <p>♦have some tea and some more of these soft French rolls</p>
+                  <p>♦have some tea and some more of these soft French</p>
+                </small>
+                </div>
+              </h2></div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-xs-12 col-md-12 col-lg-4 col-xl-4">
+        <a href="test.html" class="btn btn-danger btn-rounded">
+          <i class="fas fa-play text-danger rounded-circle bg-white mr-1" style="padding: 8px 9px;"></i>
+            Начать тест</a>
+
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+<footer>
+</footer>
+
+
+                                                      <!--         java      -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+  </body>
 </html>
