--- a/html/index.html
+++ b/html/index.html
@@ -14,31 +14,31 @@
   </head>
   <body>
       <header>
-          <div class="header">
-            <div class="menu">
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-7">
-                    <div class="logo">
-                      <a href="test.html">
-                      <img src="img/logo1.png" alt="" class="img-fluid"/></a>
-                    </div>
+        <div class="header">
+          <div class="menu">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-7">
+                  <div class="logo startanime">
+                    <a href="test.html">
+                    <img src="img/logo1.png" alt="" class="img-fluid"/></a>
                   </div>
-                  <div class="col-md-5">
-                    <nav>
-                        <!-- возмоджно тут будут контакты :/ -->
-                    </nav>
-                  </div>
+                </div>
+                <div class="col-md-5">
+                  <nav>
+                                              <!-- возмоджно тут будут контакты :/ -->
+                  </nav>
                 </div>
               </div>
             </div>
           </div>
+        </div>
       </header>
 <section>
   <div class="block">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-12 col-xs-12 col-md-12 col-lg-8 col-xl-8">
+        <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-10 startanime">
           <div class="row">
               <div class="col-md-6">
                 <h1 href="#">
@@ -53,7 +53,7 @@
                     </small>
                       </div>
               </h1></div>
-              <div class="col-md-6">
+              <div class="col-md-6 rightverson">
                 <h2 href="#">
                 <button type="button" class="btn btn-info btn-circle">
                   <i class="fa fa-suitcase"></i>
@@ -68,8 +68,8 @@
               </h2></div>
           </div>
         </div>
-        <div class="col-sm-12 col-xs-12 col-md-12 col-lg-4 col-xl-4">
-        <a href="test.html" class="btn btn-danger btn-rounded">
+        <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-2 startanime">
+        <a href="test.html" class="btn btn-danger btn-rounded startbtn">
           <i class="fas fa-play text-danger rounded-circle bg-white mr-1" style="padding: 8px 9px;"></i>
             Начать тест</a>
 
