Improved the site

--- a/html/index.html
+++ b/html/index.html
@@ -69,12 +69,9 @@
           </div>
         </div>
         <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-2 startanime">
-        <a href="test.html" class="btn btn-danger btn-rounded startbtn">
-          <i class="fas fa-play text-danger rounded-circle bg-white mr-1" style="padding: 8px 9px;"></i>
+        <a href="test.html" class="btn btn-rounded startbtn">
+          <i class="fas fa-play rounded-circle bg-white mr-1" style="padding: 8px 9px;"></i>
             Начать тест</a>
-
-
-
         </div>
       </div>
     </div>
