--- a/html/test.html
+++ b/html/test.html
@@ -71,10 +71,11 @@
                         </div>`).join('\n')
                       </script>
                   </form>
-  <button class="otpr" id="otpr1" type="button">поменять</button>
+  <button class="otprbtn" id="otpr1" type="button">поменять</button>
 </section>
 <section id="sec2" class="hidden block">
   <form class="" action="" id="form1" method="post">
+                                                               <!-- симптомы -->
      <script type="text/javascript">
      function sqr(arr=[]){
        document.getElementById("form1").innerHTML =arr.map((el, index) => `
@@ -85,7 +86,7 @@
      }
      </script>
   </form>
-  <button class="otpr" id="otpr2" type="button">отправить</button>
+  <button class="otprbtn" id="otpr2" type="button">отправить</button>
 </section>
 <section id="sec3" class="hidden block">
 <div id="doctorslist">
@@ -95,6 +96,7 @@
      <div class="doctors">
 
      </div>
+                                                                <!-- доктора -->
      <script type="text/javascript">
      function sqr1(arr=[]){
 
@@ -114,7 +116,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script>
-      const colors=["#d987d1"]
+      const colors=["#696969"]
       const label=document.querySelectorAll('label')
       for(let i=0; i<label.length; i++) {
       label[i].style.background=colors[Math.floor(Math.random() * (colors.length))]
@@ -124,9 +126,9 @@
     <script type="text/javascript">
 
   document.getElementById('otpr1').addEventListener('click', (event) => {
-     request("!REPLACE WITH URL TO SYMPTOMS LIST").then(data => {
+     request("URL TO /symptoms_list").then(data => {
      sqr(data)
-   })
+     })
 
     document.getElementById('sec1').classList.add("hidden")
     document.getElementById('sec2').classList.remove("hidden")
@@ -141,9 +143,9 @@
   document.getElementById('otpr2').addEventListener('click', (event) => {
       const values =  Array.from(document.querySelectorAll('.symptom:checked')).map(el => el.value)
       console.log(values)
-      request("!REPLACE WITH URL TO PROLOG API","POST",values).then(data => {
-        sqr1(data)
-      })
+      request("URL TO /answer","POST",values).then(data => {
+      sqr1(data)
+        })
 
       document.getElementById('sec2').classList.add("hidden")
       document.getElementById('sec3').classList.remove("hidden")
